Fixed sponsor logos disposition on small screens

--- a/style/css/main.css
+++ b/style/css/main.css
@@ -6,3 +6,4 @@
 {% include css/papers.css %}
 {% include css/registration.css %}
 {% include css/program.css %}
+{% include css/logos.css %}
